update tp add images streams.
