# api/controllers/stream.js
@@ -16,8 +16,9 @@ module.exports.createStream = (req, res) => {
 module.exports.deleteStream = (req, res) => {
 
     let id = req.swagger.params.id.value;
+    let type = req.swagger.params.type.value;
 
-    global.module.deleteStream(id)
+    global.module.deleteStream(id, type)
         .then( () => {
             res.json( { result : 'ok'  } );
         })
@@ -29,10 +30,15 @@ module.exports.deleteStream = (req, res) => {
 module.exports.getStreamData = (req, res) => {
 
     let id = req.swagger.params.id.value;
+    let type = req.swagger.params.type.value;
 
-    global.module.getStreamData(id, req.originalUrl.replace(`/stream/${id}/`, ''))
+    global.module.getStreamData(id, type, req.originalUrl.replace(`/stream/${id}/${type}/`, ''))
         .then( (file) => {
-            res.contentType('application/x-mpegURL');
+            if ( type === 'live')
+                res.contentType('application/x-mpegURL');
+            else
+                res.contentType('image/jpeg');
+
             res.sendFile(file);
             //res.end();
         })
